fix(): z-index

--- a/src/components/backgrounds/backgrounds.less
+++ b/src/components/backgrounds/backgrounds.less
@@ -5,6 +5,6 @@
     left: 0;
     right: 0; 
     bottom: 0;
-    transform: translateZ(3rem);
+    transform: translateZ(1rem);
   }
 }
