--- a/src/components/description/description.less
+++ b/src/components/description/description.less
@@ -5,7 +5,7 @@
   bottom: 40rem;
   left: 50%;
   z-index: 1;
-  transform: translateZ(1rem);
+  transform: translateZ(3rem);
 
   @media (max-aspect-ratio: @responsive-aspect-step1) {
     left: 38%;
